--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react-image-gallery": "^1.2.8",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^2.1.3",
+    "react-tsparticles": "^2.3.1",
     "styled-components": "^5.3.3",
+    "tsparticles": "^2.3.1",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.17"
   },
