--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-image-gallery": "^1.2.8",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^2.1.3",
     "react-tsparticles": "^2.3.1",
