--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^2.1.3",
+    "react-scroll": "^1.8.9",
     "react-tsparticles": "^2.3.1",
     "styled-components": "^5.3.3",
     "tsparticles": "^2.3.1",
